--- a/PalettePal web/wwwroot/css/site.css
+++ b/PalettePal web/wwwroot/css/site.css
@@ -69,3 +69,22 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+.color {
+    display: flex;
+    width: 100px;
+    height: 100px;
+    margin: 10px 30px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50px;
+}
+
+.colors-container {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+label {
+    display: block;
+}
