--- a/PalettePal web/Pages/Index.cshtml
+++ b/PalettePal web/Pages/Index.cshtml
@@ -5,8 +5,7 @@
 }
 
 <div class="text-center">
-    <h4>Upload files</h4>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    
 </div>
 
 <form enctype="multipart/form-data" method="post">
@@ -14,7 +13,7 @@
         <tr>
             <td>
                 <label>
-                    <img id="form-image" src="~/cat.jpg" height="500" />
+                    <img id="form-image" src="~/default.jpg" height="500" />
                     <input asp-for="FormFile" type="file" onchange="previewFile()" hidden />
                 </label>
             </td>
@@ -25,10 +24,6 @@
                         Количество цветов
                         <input asp-for="ColorsCount" type="range" min="3" max="10" />
                     </label>
-                    <label>
-                        Чувствительность
-                        <input asp-for="Sensitivity" type="range" min="5" max="95" />
-                    </label>
                     <input type="submit" class="btn btn-primary" />
                 </div>
             </td>
@@ -36,30 +31,17 @@
     </table>
 </form>
 
-<p>Elapsed: @ViewData["Time"] ms</p>
+<div class="colors-container"></div>
 
-<div class="colors-container">
-    @{
-        if (ViewData["ColorsList"] is List<string> colorsList)
-        {
-
-            @foreach (string color in colorsList)
-            {
-                <div class="color" style="background-color: #@color">
-                    <a>@color</a>
-                </div>
-            }
-
-        }
-    }
-</div>
+<p>Elapsed: <span id="elapsed"></span> ms</p>
 
 @section Scripts {
     <script>
+        let colorsContainer = $(".colors-container").first();
+
         $("form").submit(async function (event) {
             event.preventDefault();
-            // test image size
-            let colorsContainer = $(".colors-container").first();
+            // TODO: test image size
             colorsContainer.empty();
             let response = await fetch(this.action, {
                 method: "ajax",
@@ -67,19 +49,10 @@
             });
             let result = await response.json();
             for (let color of result.colorsList) {
-                colorsContainer.append(`<div class="color" style="background-color: #${color}"><a>${color}</a></div>`);
-            }
-        });
-
-        function sendForm(event) {
-            let form = $("form")[0];
-            let maxFileSize = 5242880;
-            let Data = new FormData();
-            const file = document.querySelector('input[type=file]').files[0];
-            if ((file.size <= maxFileSize) && ((file.type == 'image/png') || (file.type == 'image/jpeg'))) {
-                Data.append("FormFile", file);
+                colorsContainer.append(`<div class="color" style="background-color: #${color}"><a>#${color}</a></div>`);
             };
-        };
+            $("#elapsed").text(result.time);
+        });
 
         function previewFile() {
             const preview = document.querySelector('img');
