--- a/PalettePal web/Pages/Index.cshtml
+++ b/PalettePal web/Pages/Index.cshtml
@@ -13,7 +13,7 @@
         <tr>
             <td>
                 <label>
-                    <img id="form-image" src="~/default.jpg" height="500" />
+                    <img id="form-image" src="~/default.png" height="500" />
                     <input asp-for="FormFile" type="file" onchange="previewFile()" hidden />
                 </label>
             </td>
