--- a/PalettePal web/wwwroot/css/site2.css
+++ b/PalettePal web/wwwroot/css/site2.css
@@ -4,6 +4,7 @@ body {
     font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
+    color: #FFFFFF;
 }
 
 header {
@@ -11,13 +12,11 @@ header {
     padding: 80px 0px 50px 0px;
     text-align: center;
     font-size: 54px;
-    color: #FFFFFF;
     mix-blend-mode: overlay;
 }
 
 .instruction {
     height: 265px;
-    color: #FFFFFF;
     font-size: 16px;
     line-height: 25px;
     letter-spacing: 0.03em;
@@ -90,15 +89,30 @@ header {
 }
 
 .image {
-    
-}
-
-.image img {
-    
-}
-
-.image .test {
-    width: 200px;
-    height: 200px;
+    display: flex;
+    width: 500px;
+    height: 500px;
     margin: 50px auto;
+    mix-blend-mode: overlay;
+    border: 14px solid #D9D9D9;
+    border-radius: 10px;
+    justify-content: center;
+    align-items: center;
+}
+
+.palette {
+    background: #F1F1F1;
+    mix-blend-mode: overlay;
+    border-radius: 20px;
+    margin: 50px 10%;
+    padding: 45px 69px;
+    font-size: 21px;
+    line-height: 25px;
+}
+
+.palette h1 {
+    margin: 0px;
+    font-size: 36px;
+    line-height: 58px;
+    font-weight: inherit;
 }
