--- a/PalettePal web/wwwroot/css/site2.css
+++ b/PalettePal web/wwwroot/css/site2.css
@@ -16,7 +16,7 @@ header {
 }
 
 .instruction {
-    height: 265px;
+    position: relative;
     font-size: 16px;
     line-height: 25px;
     letter-spacing: 0.03em;
@@ -27,7 +27,7 @@ header {
     position: absolute;
     content: "";
     width: 100%;
-    height: 265px;
+    height: 100%;
     background: #FFFFFF;
     mix-blend-mode: overlay;
     opacity: 0.3;
