--- a/PalettePal web/wwwroot/css/site2.css
+++ b/PalettePal web/wwwroot/css/site2.css
@@ -20,9 +20,10 @@ header {
     font-size: 16px;
     line-height: 25px;
     letter-spacing: 0.03em;
+    
 }
 
-/*фон*/
+/*фон инструкции*/
 .instruction::before {
     position: absolute;
     content: "";
@@ -40,6 +41,7 @@ header {
     display: flex;
     justify-content: space-around;
     padding: 0px;
+    padding-bottom: 30px;
 }
 
 .instruction ol li {
@@ -101,10 +103,23 @@ header {
 }
 
 .palette {
+    position: relative;
+    margin: 50px 10%;
+}
+
+/*фон палитры*/
+.palette::before {
+    border-radius: 20px;
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 100%;
     background: #F1F1F1;
     mix-blend-mode: overlay;
-    border-radius: 20px;
-    margin: 50px 10%;
+    z-index: -1;
+}
+
+.palette-content {
     padding: 45px 69px;
     font-size: 21px;
     line-height: 25px;
@@ -115,4 +130,8 @@ header {
     font-size: 36px;
     line-height: 58px;
     font-weight: inherit;
+}
+
+.colors-list {
+
 }
