--- a/PalettePal web/wwwroot/css/site.css
+++ b/PalettePal web/wwwroot/css/site.css
@@ -1,90 +1,170 @@
-﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
-for details on configuring this project to bundle and minify static web assets. */
-
-a.navbar-brand {
-  white-space: normal;
-  text-align: center;
-  word-break: break-all;
-}
-
-/* Provide sufficient contrast against white background */
-a {
-  color: #0366d6;
-}
-
-.btn-primary {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
-}
-
-.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
-}
-
-/* Sticky footer styles
--------------------------------------------------- */
-html {
-  font-size: 14px;
-}
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
-}
-
-.border-top {
-  border-top: 1px solid #e5e5e5;
-}
-.border-bottom {
-  border-bottom: 1px solid #e5e5e5;
-}
-
-.box-shadow {
-  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
-}
-
-button.accept-policy {
-  font-size: 1rem;
-  line-height: inherit;
-}
-
-/* Sticky footer styles
--------------------------------------------------- */
-html {
-  position: relative;
-  min-height: 100%;
-}
-
 body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
-}
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  white-space: nowrap;
-  line-height: 60px; /* Vertically center the text there */
+    background: #4C0777;
+    margin: 0px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    color: #FFFFFF;
 }
 
-.color {
+header {
+    line-height: 25px;
+    padding: 80px 0px 50px 0px;
+    text-align: center;
+    font-size: 54px;
+    mix-blend-mode: overlay;
+}
+
+.instruction {
+    position: relative;
+    font-size: 16px;
+    line-height: 25px;
+    letter-spacing: 0.03em;
+    
+}
+
+/*фон инструкции*/
+.instruction::before {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 100%;
+    background: #FFFFFF;
+    mix-blend-mode: overlay;
+    opacity: 0.3;
+    z-index: -1;
+}
+
+.instruction ol {
+    list-style-type: none;
+    counter-reset: num;
     display: flex;
-    width: 100px;
-    height: 100px;
-    margin: 10px 30px;
+    justify-content: space-around;
+    padding: 0px;
+    padding-bottom: 30px;
+}
+
+.instruction ol li {
+    max-width: 246px;
+    margin: 0px 40px;
+}
+
+/*номер элемента списка*/
+.instruction ol li::before {
+    content: counter(num);
+    counter-increment: num;
+    display: block;
+    font-family: 'Montserrat';
+    font-size: 105px;
+    line-height: 113px;
+    opacity: 0.3;
+    color: black;
+}
+
+.instruction select, .instruction input {
+    display: block;
+    background: #AD2BFF;
+    border-radius: 10px;
+    border-width: 0px;
+    margin-top: 10px;;
+    font-size: 24px;
+    line-height: 25px;
+    color: #FFFFFF;
+    height: 70px;
+}
+
+.instruction #file-input {
+    display: none;
+}
+
+.instruction input {
+    width: 100%;
+}
+
+.instruction select {
+    padding: 22px 66px 22px 22px;
+    appearance: none;
+    background-image: url("data:image/svg+xml;utf8,<svg width='16' height='9' viewBox='0 0 16 9' fill='none' xmlns='http://www.w3.org/2000/svg'><path d='M7.29289 8.70711C7.68342 9.09763 8.31658 9.09763 8.70711 8.70711L15.0711 2.34315C15.4616 1.95262 15.4616 1.31946 15.0711 0.928932C14.6805 0.538408 14.0474 0.538408 13.6569 0.928932L8 6.58579L2.34315 0.928932C1.95262 0.538408 1.31946 0.538408 0.928932 0.928932C0.538408 1.31946 0.538408 1.95262 0.928932 2.34315L7.29289 8.70711ZM7 7V8H9V7H7Z' fill='white'/></svg>");
+    background-repeat: no-repeat;
+    background-position: 85%;
+}
+
+.instruction input[type=submit] {
+    color: #5E0297;
+    background: linear-gradient(107.86deg, #FAFF00 25.41%, #FC7AFF 77.88%);
+}
+
+.image {
+    display: flex;
+    width: 500px;
+    height: 500px;
+    margin: 50px auto;
+    mix-blend-mode: overlay;
+    border: 14px solid #D9D9D9;
+    border-radius: 10px;
     justify-content: center;
     align-items: center;
-    border-radius: 50px;
 }
 
-.colors-container {
+.palette {
+    position: relative;
+    margin: 50px 10% 0px 10%;
+}
+
+/*фон палитры*/
+.palette::before {
+    border-radius: 20px;
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 100%;
+    background: #F1F1F1;
+    mix-blend-mode: overlay;
+    z-index: -1;
+}
+
+.palette-content {
+    padding: 45px 69px;
+    font-size: 21px;
+    line-height: 25px;
+}
+
+.palette h1 {
+    margin: 0px;
+    font-size: 36px;
+    line-height: 58px;
+    font-weight: inherit;
+}
+
+.colors-list {
+    list-style-type: none;
     display: flex;
+    margin: 0px;
+    margin-top: 30px;
+    padding: 0px;
+    flex-direction: row;
+    gap: 15px;
     flex-wrap: wrap;
 }
 
-label {
-    display: block;
+.colors-list li {
+    width: 148px;
+    height: 53px;
+    text-align: center;
+    line-height: 53px;
+    border-radius: 10px;
+    background: #9F5146;
+    font-size: 16px;
+    
+}
+
+footer {
+    padding: 80px 0px;
+    text-align: center;
+    mix-blend-mode: overlay;
+    font-size: 16px;
+}
+
+footer a {
+    color: #FFFFFF;
 }
