--- a/PalettePal web/wwwroot/css/site.css
+++ b/PalettePal web/wwwroot/css/site.css
@@ -1,4 +1,5 @@
 body {
+    position: relative;
     background: #4C0777;
     margin: 0px;
     font-family: 'Inter';
@@ -8,12 +9,14 @@ body {
 }
 
 header {
-    line-height: 25px;
+    line-height: 54px;
     padding: 80px 0px 50px 0px;
     text-align: center;
     font-size: 54px;
     mix-blend-mode: overlay;
 }
+
+/* Инструкция */
 
 .instruction {
     position: relative;
@@ -66,7 +69,7 @@ header {
     background: #AD2BFF;
     border-radius: 10px;
     border-width: 0px;
-    margin-top: 10px;;
+    margin-top: 10px;
     font-size: 24px;
     line-height: 25px;
     color: #FFFFFF;
@@ -94,17 +97,35 @@ header {
     background: linear-gradient(107.86deg, #FAFF00 25.41%, #FC7AFF 77.88%);
 }
 
+/* Изображение */
+
 .image {
+    position: relative;
     display: flex;
     width: 500px;
     height: 500px;
     margin: 50px auto;
-    mix-blend-mode: overlay;
-    border: 14px solid #D9D9D9;
-    border-radius: 10px;
     justify-content: center;
     align-items: center;
 }
+
+/*рамка изображения*/
+.image::before {
+    position: absolute;
+    mix-blend-mode: overlay;
+    border: 14px solid #D9D9D9;
+    border-radius: 10px;
+    content: "";
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+}
+
+.image img {
+    max-height:500px;
+}
+
+/* Палитра */
 
 .palette {
     position: relative;
@@ -135,6 +156,8 @@ header {
     line-height: 58px;
     font-weight: inherit;
 }
+
+/* Список цветов */
 
 .colors-list {
     list-style-type: none;
@@ -167,4 +190,104 @@ footer {
 
 footer a {
     color: #FFFFFF;
+}
+
+/* Фон */
+
+#background {
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    z-index: -2;
+    overflow: hidden;
+}
+
+.ellipse-1 {
+    position: absolute;
+    width: 1020px;
+    height: 155px;
+    left: 52%;
+    top: 21%;
+    background: #FC7AFF;
+    filter: blur(102px);
+    transform: rotate(132.29deg);
+}
+
+.ellipse-2 {
+    position: absolute;
+    width: 585px;
+    height: 1019px;
+    left: -35%;
+    top: 37%;
+    background: #087BBC;
+    filter: blur(358.5px);
+    transform: rotate(40.5deg);
+}
+
+.ellipse-3 {
+    position: absolute;
+    width: 1186px;
+    height: 270px;
+    left: 57%;
+    top: 112%;
+    background: #FAFF00;
+    filter: blur(146px);
+    transform: rotate(-129.6deg);
+}
+
+.ellipse-4 {
+    position: absolute;
+    width: 585px;
+    height: 1019px;
+    left: 100%;
+    top: 40%;
+    background: #B808BC;
+    filter: blur(358.5px);
+    transform: rotate(40.5deg);
+}
+
+.ellipse-5 {
+    position: absolute;
+    width: 1186px;
+    height: 270px;
+    left: 42%;
+    top: -2%;
+    background: #FAFF00;
+    filter: blur(146px);
+    transform: rotate(149.05deg);
+}
+
+.ellipse-6 {
+    position: absolute;
+    width: 585px;
+    height: 1019px;
+    left: 74%;
+    top: 82%;
+    background: #087BBC;
+    filter: blur(358.5px);
+    transform: rotate(-23.62deg);
+}
+
+.ellipse-7 {
+    position: absolute;
+    width: 1023px;
+    height: 155px;
+    left: -338.84px;
+    top: 1970px;
+    background: #FC7AFF;
+    filter: blur(102px);
+    transform: rotate(8.23deg);
+}
+
+.ellipse-8 {
+    position: absolute;
+    width: 1186px;
+    height: 270px;
+    left: -81%;
+    top: 85%;
+    background: #FAFF00;
+    filter: blur(146px);
+    transform: rotate(25deg);
 }
