--- a/PalettePal web/Pages/Index.cshtml
+++ b/PalettePal web/Pages/Index.cshtml
@@ -27,7 +27,11 @@
             </li>
             <li>
                 Нажми на кнопку и получи палитру цветов
-                <input type="submit" value="Определить цвета">
+                <div class="border-animation">
+                    <div class="thin-border"></div>
+                    <div class="thick-border"></div>
+                    <input type="submit" value="Определить цвета">
+                </div>
             </li>
         </ol>
     </form>
